k3d-sandboxes/gme-llb-sandbox/manifests/curl-central.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-central
  namespace: movies
  labels:
    app: curl-central
spec:
  replicas: 3
  selector:
    matchLabels:
      app: curl-central
  template:
    metadata:
      labels:
        app: curl-central
    spec:
      containers:
      - name: curl-central
        image: alpine/curl:8.12.1
        imagePullPolicy: IfNotPresent
        args: ["-s", "http://movieinfo.movies.svc.cluster.local/index.html"]
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [central]
