k3d-sandboxes/gme-llb-sandbox/manifests/curl-east.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-east
  namespace: movies
  labels:
    app: curl-east
spec:
  replicas: 3
  selector:
    matchLabels:
      app: curl-east
  template:
    metadata:
      labels:
        app: curl-east
    spec:
      containers:
      - name: curl-east
        image: alpine/curl
        imagePullPolicy: IfNotPresent
        args: ["-s", "http://movieinfo.movies.svc.cluster.local/index.html"]
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [east]
