k3d-sandboxes/gme-llb-sandbox/manifests/grafana-ext-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: gloo-mesh
spec:
  type: ExternalName
  externalName: grafana.grafana.svc.cluster.local
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
