k3d-sandboxes/gme-llb-sandbox/manifests/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
  name: gloo-mesh-ui-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gloo-mesh-ui
            namespace: gloo-mesh
            port:
              number: 8090
        path: /
        pathType: Prefix
      - backend:
          service:
            name: grafana
            namespace: grafana
            port:
              number: 80
        path: /grafana
        pathType: Prefix
