k3d-sandboxes/gme-llb-sandbox/manifests/gloo-mesh-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
  name: gloo-mesh-ui-ingress
  namespace: gloo-mesh
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gloo-mesh-ui
            port:
              number: 8090
        path: /gloo
        pathType: Prefix
